[package]
name = "solana-cross-chain-bridge-wormhole"
version = "0.1.0"
description = "Wormhole-inspired cross-chain bridge with ZK proof integration for secure, verifiable DeFi/RWA transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_cross_chain_bridge_wormhole"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18"
bytemuck = { version = "1.14", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
